tests/paczka1/small_fuzzy/33309438.err
Error in line 1: axnNHhcN A71 51,2
Error in line 4: MkEomKY7Dj S856 8,2
